--- a/options.html
+++ b/options.html
@@ -180,63 +180,63 @@
         Theta: ${theta.toFixed(4)}<br>
         Rho: ${rho.toFixed(4)}
       `;
+      function getSuggestions() {
+        const suggestions = [];
+
+        if ((type === "call" && delta > 0.8) || (type === "put" && delta < -0.8)) {
+          suggestions.push("Deep in-the-money: Consider a covered strategy.");
+        } else if (Math.abs(delta) < 0.3) {
+          suggestions.push("Low Delta: Unlikely to be profitable without a large move.");
+        }
+
+        if (gamma > 0.1) {
+          suggestions.push("High Gamma: Rapid changes in Delta—be cautious.");
+        }
+
+        if (theta < -0.05) {
+          suggestions.push("Time decay is significant—maybe use a spread strategy.");
+        }
+
+        if (vega > 0.2) {
+          suggestions.push("High Vega: Ideal for volatility trades, but risky in calm markets.");
+        }
+
+        if (Math.abs(rho) > 0.5) {
+          suggestions.push("Interest-rate sensitivity detected. Useful in macro trades.");
+        }
+
+        return suggestions;
+        }
+
+        const tips = getSuggestions(delta, gamma, theta, vega, rho, type);
+        document.getElementById("bsResult").innerHTML += "<br><br><strong>Suggestions:</strong><ul>" +
+        tips.map(t => `<li>${t}</li>`).join("") + "</ul>";
+
+        // Standard normal cumulative distribution function
+        function cdf(x) {
+        return (1.0 + erf(x / Math.sqrt(2))) / 2.0;
+        }
+
+        // Approximate the error function
+        function erf(x) {
+        // Abramowitz and Stegun formula 7.1.26
+        const sign = x < 0 ? -1 : 1;
+        x = Math.abs(x);
+
+        const a1 =  0.254829592;
+        const a2 = -0.284496736;
+        const a3 =  1.421413741;
+        const a4 = -1.453152027;
+        const a5 =  1.061405429;
+        const p  =  0.3275911;
+
+        const t = 1 / (1 + p * x);
+        const y = 1 - (((((a5 * t + a4) * t) + a3) * t + a2) * t + a1) * t * Math.exp(-x * x);
+
+        return sign * y;
+      }
     }
 
-    function getSuggestions(delta, gamma, theta, vega, rho, type) {
-      const suggestions = [];
-
-      if ((type === "call" && delta > 0.8) || (type === "put" && delta < -0.8)) {
-        suggestions.push("Deep in-the-money: Consider a covered strategy.");
-      } else if (Math.abs(delta) < 0.3) {
-        suggestions.push("Low Delta: Unlikely to be profitable without a large move.");
-      }
-
-      if (gamma > 0.1) {
-        suggestions.push("High Gamma: Rapid changes in Delta—be cautious.");
-      }
-
-      if (theta < -0.05) {
-        suggestions.push("Time decay is significant—maybe use a spread strategy.");
-      }
-
-      if (vega > 0.2) {
-        suggestions.push("High Vega: Ideal for volatility trades, but risky in calm markets.");
-      }
-
-      if (Math.abs(rho) > 0.5) {
-        suggestions.push("Interest-rate sensitivity detected. Useful in macro trades.");
-      }
-
-      return suggestions;
-    }
-
-    const tips = getSuggestions(delta, gamma, theta, vega, rho, type);
-    document.getElementById("bsResult").innerHTML += "<br><br><strong>Suggestions:</strong><ul>" +
-      tips.map(t => `<li>${t}</li>`).join("") + "</ul>";
-
-    // Standard normal cumulative distribution function
-    function cdf(x) {
-      return (1.0 + erf(x / Math.sqrt(2))) / 2.0;
-    }
-
-    // Approximate the error function
-    function erf(x) {
-      // Abramowitz and Stegun formula 7.1.26
-      const sign = x < 0 ? -1 : 1;
-      x = Math.abs(x);
-
-      const a1 =  0.254829592;
-      const a2 = -0.284496736;
-      const a3 =  1.421413741;
-      const a4 = -1.453152027;
-      const a5 =  1.061405429;
-      const p  =  0.3275911;
-
-      const t = 1 / (1 + p * x);
-      const y = 1 - (((((a5 * t + a4) * t) + a3) * t + a2) * t + a1) * t * Math.exp(-x * x);
-
-      return sign * y;
-    }
 
   </script>
 </body>
