--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <input type="number" id="stopPrice" placeholder="Stop Price" style="display: none;">
           <input type="number" id="trailAmount" placeholder="Trailing Amount" style="display: none;">
           <button onclick="createOrder()">Create</button>
+          <div id="livePricePopup" style="display: none; margin: 5px 0; font-weight: bold; background: #e3f6ff; padding: 5px 10px; border-radius: 5px;"></div>
     </div>
 
     <div class="card">
@@ -43,6 +44,13 @@
       <div id="predictionResult" style="margin-top: 15px; font-weight: bold;"></div>
       <div id="retrainResult" style="margin-top: 10px; font-style: italic; color: #444;"></div>
       <p id="retrainTimestamp" style="color: #999; font-size: 0.9em;"></p>
+    </div>
+
+    <div class="card">
+      <h2>AI Trading Assistant</h2>
+      <input type="text" id="nlpInput" placeholder="e.g. I want to buy 10 shares of AAPL at $180">
+      <button onclick="convertOrder()">Convert</button>
+      <pre id="nlpOutput" style="margin-top: 10px; white-space: pre-wrap;"></pre>
     </div>
 
     <table>
@@ -203,6 +211,73 @@ async function retrainModel() {
     console.error(error);
   }
 }
+
+document.getElementById("symbol").addEventListener("input", async function () {
+  const symbol = this.value.toUpperCase();
+  const livePricePopup = document.getElementById("livePricePopup");
+
+  if (!symbol || symbol.length < 1) {
+    livePricePopup.style.display = "none";
+    return;
+  }
+
+  try {
+    const res = await fetch(`http://localhost:5001/price/${symbol}`);
+    const data = await res.json();
+
+    if (data.price) {
+      livePricePopup.style.display = "block";
+      livePricePopup.innerText = `Live Price for ${symbol}: $${data.price}`;
+    } else {
+      livePricePopup.style.display = "block";
+      livePricePopup.innerText = `⚠️ ${data.error || "Symbol not found"}`;
+    }
+  } catch (err) {
+    console.error("Price fetch failed:", err);
+    livePricePopup.style.display = "block";
+    livePricePopup.innerText = "⚠️ Error fetching live price.";
+  }
+});
+
+
+async function convertOrder() {
+  const input = document.getElementById("nlpInput").value;
+  const output = document.getElementById("nlpOutput");
+  output.innerText = "Parsing your request...";
+
+  try {
+    const res = await fetch("http://localhost:5001/nlp_order", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ text: input })
+    });
+    const data = await res.json();
+
+    if (data.error) {
+      output.innerText = "❌ " + data.error;
+      return;
+    }
+
+    const parsed = JSON.parse(data.parsed); // ← Convert JSON string to object
+    output.innerText = "Parsed Order:\n" + JSON.stringify(parsed, null, 2);
+
+    // 🔁 Auto-fill form fields
+    if (parsed.order_type) document.getElementById("orderCategory").value = parsed.order_type;
+    if (parsed.symbol) document.getElementById("symbol").value = parsed.symbol;
+    if (parsed.quantity) document.getElementById("quantity").value = parsed.quantity;
+    if (parsed.limit_price) document.getElementById("limitPrice").value = parsed.limit_price;
+    if (parsed.stop_price) document.getElementById("stopPrice").value = parsed.stop_price;
+    if (parsed.trail_amount) document.getElementById("trailAmount").value = parsed.trail_amount;
+
+    // Trigger any UI changes (e.g. show/hide limit/stop inputs)
+    document.getElementById("orderCategory").dispatchEvent(new Event("change"));
+  } catch (err) {
+    console.error(err);
+    output.innerText = "Failed to parse your sentence.";
+  }
+}
+
+
 
     fetchOrders();
   </script>
