--- a/dashboard.html
+++ b/dashboard.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="card" style="margin-top: 30px">
-      <h3>Price Trend</h3>
+      <h3>Stock Prediction (7 Days)</h3>
       <canvas id="trendChart" width="600" height="300"></canvas>
     </div>
 
